# special-train

./: .gitignore  CODEOWNERS  LICENSE  README.md  pyproject.toml
.github/workflows/: get_data.yaml  preprocess.yaml
special_train/: config.py  get_data.py  get_historical_data.py  train.py  utils.py
special_train/data/: get_data.py  preprocess.py  technical_indicators.py
special_train/eval/: eval.py
special_train/train/: config.py  feature_engineering.py  launch_train.py  train.py  train_utils.py  training_config.py
