[tool.poetry]
name = "special-train"
version = "0.1.0"
description = "Ethereum price prediction"
authors = ["Zak Raicik"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
polygon-api-client = "^1.14.2"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
boto3 = "^1.34.148"
tensorflow = "^2.17.0"
keras = "^3.4.1"
sagemaker = "^2.227.0"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
matplotlib = "^3.9.1.post1"
pyarrow = "^17.0.0"
tensorflow-io = "^0.37.1"
ta-lib = "^0.4.32"

[tool.poetry.extras]
local = ["keras-tuner"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
